Fix mobile control buttons not showing on touch devices

--- a/style.css
+++ b/style.css
@@ -574,7 +574,7 @@ canvas {
     display: none;
   }
 }
-@media only screen and (min-width: 1200px) and (min-height: 480px) {
+@media only screen and (min-width: 915px) {
   .hide {
     display: none;
   }
